* Author: Mike FABIAN <mfabian@redhat.com>
* 10 Aug 2016 Released 1.5.0 version
* If the lookup table shows related words, “Escape” shows the original lookup table
* Use itb_nltk.py to find related words (synonyms, hypernyms, and hyponyms)
* Add a module to find related words using NLTK
* Add a feature to find similar emoji
* Add predictions for emoji (optional, on by default)
* Add a module to match emoji using Unicode, CLDR, and emojione data
* Make typing-booster.appdata.xml translatable
* When ignoring key release events, “False” should be returned, not “True” (Resolves: rhbz#1365497)
* Make typing smoother by updating the candidates using GLib.idle_add()
* Make it possible to enter a space into the preëdit by typing “G- ” (AltGr+Space)

* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Jul 2016 Released 1.4.8 version
* Make m17n_translit handle “NoIme” as a dummy input method
* Simplify some code in hunspell_table.py which did treat “NoIme” as a special case
* Commit preëdit if modifier keys without transliteration are typed and pass the key through (Resolves: rhbz#1351748)

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Jul 2016 Released 1.4.7 version
* Check if the commit key would change the transliteration if used as regular input (Resolves: rhbz#1353672)

* Author: Mike FABIAN <mfabian@redhat.com>
* 01 Jul 2016 Released 1.4.6 version
* Pass modifier key combinations through if there is no possible transliteration for that key combination (Resolves: rhbz#1351748)

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 May 2016 Released 1.4.5 version
* Do not colourize the preëdit dark blue, that is unreadable on dark backgrounds (Resolves: rhbz#1335201)
* Set the size of the libm17n mconv conversion buffer correctly (Resolves: rhbz#1335021)

* Author: Mike FABIAN <mfabian@redhat.com>
* 10 May 2016 Released 1.4.4 version
* self._current_imes needs to be updated before self.init_transliterators() (Resolves: rhbz#1334579)

* Author: Mike FABIAN <mfabian@redhat.com>